[project]
name = "hf_helper"
version = "0.1.0"
description = "hf-helper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.37.6,<2.0",
    "streamlit>=1.33,<2.0",
    "requests>=2.31,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
hf_helper = "hf_helper.main:run"
run_crew = "hf_helper.main:run"
train = "hf_helper.main:train"
replay = "hf_helper.main:replay"
test = "hf_helper.main:test"
run_with_trigger = "hf_helper.main:run_with_trigger"
start_app = "hf_helper.launch:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
